# DistroDefender

./: .gitignore  DEVELOPERROADMAP.MD  README.MD
.github/workflows/: cmake-multi-platform.yml
config/: dd_engine_config.json
src/engine/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
src/engine/source/: StackExecutor.hpp  main.cpp
src/engine/source/api/: CMakeLists.txt
src/engine/source/api/adapter/: CMakeLists.txt
src/engine/source/api/adapter/include/api/adapter/: adapter.hpp  helpers.hpp
src/engine/source/api/adapter/test/include/api/adapter/: baseHandler_test.hpp
src/engine/source/api/adapter/test/src/unit/: adapter_test.cpp
src/engine/source/api/archiver/: CMakeLists.txt
src/engine/source/api/archiver/include/api/archiver/: handlers.hpp
src/engine/source/api/archiver/src/: handlers.cpp
src/engine/source/api/archiver/test/src/unit/: handlers_test.cpp
src/engine/source/api/catalog/: CMakeLists.txt
src/engine/source/api/catalog/include/api/catalog/: catalog.hpp  handlers.hpp
src/engine/source/api/catalog/interface/api/catalog/: icatalog.hpp  resource.hpp
src/engine/source/api/catalog/src/: catalog.cpp  handlers.cpp
src/engine/source/api/catalog/test/mocks/api/catalog/: mockCatalog.hpp
src/engine/source/api/catalog/test/src/unit/: catalog_test.cpp  catalog_test.hpp  handlers_test.cpp  jsonTestAssets.hpp  resource_test.cpp
src/engine/source/api/geo/: CMakeLists.txt
src/engine/source/api/geo/include/api/geo/: handlers.hpp
src/engine/source/api/geo/src/: handlers.cpp
src/engine/source/api/geo/test/src/unit/: handlers_test.cpp
src/engine/source/api/include/api/: handlers.hpp
src/engine/source/api/kvdb/: CMakeLists.txt
src/engine/source/api/kvdb/include/api/kvdb/: handlers.hpp
src/engine/source/api/kvdb/src/: handlers.cpp
src/engine/source/api/kvdb/test/src/unit/: handlers_test.cpp
src/engine/source/archiver/: CMakeLists.txt
src/engine/source/archiver/include/archiver/: archiver.hpp
src/engine/source/archiver/interface/archiver/: iarchiver.hpp
src/engine/source/archiver/src/: archiver.cpp
src/engine/source/archiver/test/mocks/archiver/: mockArchiver.hpp
src/engine/source/archiver/test/src/unit/: archiver_test.cpp
src/engine/source/base/: CMakeLists.txt
src/engine/source/base/include/base/: dotPath.hpp  error.hpp  expression.hpp  json.hpp  logger.hpp  name.hpp
src/engine/source/base/include/base/utils/: singleton.hpp  singletonLocator.hpp  singletonLocatorStrategies.hpp  stringUtils.hpp  timeUtils.hpp
src/engine/source/base/src/: expression.cpp  json.cpp  logger.cpp
src/engine/source/base/src/utils/: stringUtils.cpp  timeUtils.cpp
src/engine/source/base/test/src/unit/: dotPath_test.cpp  error_test.cpp  json_test.cpp  logger_test.cpp  name_test.cpp  stringUtils_test.cpp  timeUtils_test.cpp
src/engine/source/base/test/src/unit/utils/: singletonLocator_test.cpp
src/engine/source/builder/: CMakeLists.txt
src/engine/source/builder/interface/builder/: ivalidator.hpp
src/engine/source/conf/: CMakeLists.txt
src/engine/source/conf/include/conf/: conf.hpp  confLoader.hpp  keys.hpp  unitconf.hpp
src/engine/source/conf/src/: conf.cpp  confLoader.cpp
src/engine/source/conf/test/src/component/: confLoader_test.cpp
src/engine/source/conf/test/src/unit/: mockConfLoader.hpp
src/engine/source/geo/: CMakeLists.txt
src/engine/source/geo/include/geo/: dbEntry.hpp  downloader.hpp  locator.hpp  manager.hpp
src/engine/source/geo/interface/geo/: idownloader.hpp  ilocator.hpp  imanager.hpp
src/engine/source/geo/src/: downloader.cpp  locator.cpp  manager.cpp
src/engine/source/geo/test/mocks/geo/: mockDownloader.hpp  mockLocator.hpp  mockManager.hpp
src/engine/source/geo/test/src/: generateTestDB  generateTestDB.go  go.mod  testdb.mmdb
src/engine/source/geo/test/src/component/: manager_test.cpp
src/engine/source/geo/test/src/unit/: locator_test.cpp  manager_test.cpp
src/engine/source/httpserver/: CMakeLists.txt
src/engine/source/httpserver/include/: server.hpp
src/engine/source/httpserver/include/httpserver/: server.hpp
src/engine/source/httpserver/src/: server.cpp
src/engine/source/httpserver/test/src/component/: server_test.cpp
src/engine/source/httpserver/test/src/unit/: server_test.cpp
src/engine/source/kvdb/: CMakeLists.txt
src/engine/source/kvdb/include/kvdb/: kvdbHandler.hpp  kvdbHandlerCollection.hpp  kvdbManager.hpp  refCounter.hpp
src/engine/source/kvdb/interface/kvdb/: ikvdbhandler.hpp  ikvdbhandlercollection.hpp  ikvdbmanager.hpp
src/engine/source/kvdb/src/: kvdbHandler.cpp  kvdbHandlerCollection.cpp  kvdbManager.cpp  refCounter.cpp
src/engine/source/kvdb/test/mocks/kvdb/: mockKVDBHandler.hpp  mockKVDBHandlerCollection.hpp  mockKVDBManager.hpp
src/engine/source/kvdb/test/src/component/: kvdbHandler_test.cpp  kvdbManager_test.cpp
src/engine/source/kvdb/test/src/unit/: kvdb_test.cpp
src/engine/source/schemas/: CMakeLists.txt
src/engine/source/schemas/include/schemas/: catalog.hpp  engine.hpp  geo.hpp  kvdb.hpp
src/engine/source/store/: CMakeLists.txt
src/engine/source/store/drivers/fileDriver/include/store/drivers/: fileDriver.hpp
src/engine/source/store/drivers/fileDriver/src/: fileDriver.cpp
src/engine/source/store/include/store/: store.hpp
src/engine/source/store/interface/store/: idriver.hpp  istore.hpp  namespaceId.hpp  utils.hpp
src/engine/source/store/src/: store.cpp
src/engine/source/store/test/mocks/store/: mockDriver.hpp  mockStore.hpp
src/engine/source/store/test/src/component/: store_test.cpp
src/engine/source/store/test/src/unit/: fileDriver_test.cpp  store_test.cpp
